# mission-recorder

./: Readme.md  pyproject.toml
missions/: Readme.md
src/: mission.py  mission_core.py
tests/: test_mission_cli.py  test_mission_core.py
