[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mission-recorder"
version = "0.1.0"
description = "Filesystem-native CLI mission recorder"
readme = "Readme.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
mission-recorder = "mission:main"

[tool.setuptools]
py-modules = ["mission", "mission_core"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
